# AI-FHIR

./: README.md  package-lock.json  package.json
AI_COMPONENT_OF_WEBSITE/: README.md  pyproject.toml
AI_COMPONENT_OF_WEBSITE/embeddings/: embedding_0.npy  embedding_1.npy  embedding_10.npy  embedding_100.npy  embedding_1000.npy  embedding_1001.npy  embedding_1002.npy  embedding_1003.npy  embedding_1004.npy  embedding_1005.npy  embedding_1006.npy  embedding_1007.npy  embedding_1008.npy  embedding_1009.npy  embedding_101.npy  embedding_1010.npy  embedding_1011.npy  embedding_1012.npy  embedding_1013.npy  embedding_1014.npy  embedding_1015.npy  embedding_1016.npy  embedding_1017.npy  embedding_1018.npy  embedding_1019.npy  embedding_102.npy  embedding_1020.npy  embedding_1021.npy  embedding_1022.npy  embedding_1023.npy  embedding_1024.npy  embedding_1025.npy  embedding_1026.npy  embedding_1027.npy  embedding_1028.npy  embedding_1029.npy  embedding_103.npy  embedding_1030.npy  embedding_1031.npy  embedding_1032.npy  (+1796 more)
AI_COMPONENT_OF_WEBSITE/index_folder/: index.faiss  index.pkl
AI_COMPONENT_OF_WEBSITE/myenv/: pyvenv.cfg
AI_COMPONENT_OF_WEBSITE/realtimehealth/: 0a01ea80-ee77-46b8-a9b6-5f77e5538fdd.json  Illamaindexstarter.py  doctornotes.txt  file.json  testy.json
backend/: README.md  app.py  requirements.txt
src/: App.css  App.jsx
test_frontend/: README.md  package-lock.json
test_frontend/src/: App.jsx
test_frontend/src/components/: PatientCard.jsx  PatientList.jsx
webapp/: readme.md
website/: searchbar.html  webstyle.css
